# InShow

./: .env.example  .gitignore  README.md  agents.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: agents.py  analytics.py  auth.py  booth_pipeline.py  chat.py  conversation.py  db.py  graph.py  ingestion.py  llm.py  main.py  ontology.py  ontology_agent.py  projects.py  spatial.py
backend/tests/: conftest.py  test_agents.py  test_analytics.py  test_auth.py  test_booth_pipeline.py  test_chat.py  test_conversation.py  test_ingestion.py  test_ontology.py  test_ontology_agent.py  test_projects.py  test_spatial.py
docs/: PLAN.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/fixtures/: booth_elements.csv  exhibitors.csv
e2e/tests/: smoke.spec.ts
frontend/: AGENTS.md  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/[id]/: page.tsx
frontend/app/components/: AgentRibbon.tsx  Canvas.tsx  Logo.tsx  NavBar.tsx  Ontology3D.tsx  OntologyPanel.tsx  OntologySchema2D.tsx  ProjectDescribe.tsx
frontend/app/components/booth/: BoothLayout.tsx  BoothLayout2D.tsx  BoothLayout3D.tsx
frontend/app/components/metal/: MetalBackground.tsx  ThemeToggle.tsx
frontend/app/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  resizable.tsx  select.tsx  skeleton.tsx  textarea.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts  d3-force-3d.d.ts  ontology3d.ts
scripts/: start.ps1  start.sh  stop.ps1  stop.sh
(+3 files in other folders)
