[project]
name = "showsphere-backend"
version = "0.1.0"
description = "ShowSphere Exhibitor Services Agent Platform - backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "neo4j>=5.27",
    "python-multipart>=0.0.18",
    "anthropic>=0.40",
    "openai>=1.55",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false
